Fixed button being too long bug

--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -1,6 +1,15 @@
 #root {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    width: 100%;
+}
+
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .hero {
@@ -56,7 +65,7 @@
     background-color: #ff6b6b;
     color: #fff;
     border: none;
-    padding: 15px 30px;
+    padding: 15px 20px;
     font-size: 1rem;
     border-radius: 30px;
     cursor: pointer;
@@ -76,7 +85,7 @@
 }
 
 .about {
-    padding: 20px 20px;
+    padding: 40px 20px;
     text-align: center;
     background-color: black;
     color: white;
@@ -110,6 +119,7 @@
 
     .cta-buttons {
         flex-direction: column;
+        padding: 15px 20px;
         gap: 10px;
     }
 }
@@ -143,7 +153,7 @@
 }
 
 .faq {
-    padding: 20px 20px;
+    padding: 40px 20px;
     background-color: black;
 }
 
@@ -153,7 +163,7 @@
 }
 
 .donation {
-    padding: 20px 20px;
+    padding: 40px 20px;
     background-color: black;
 }
 
